# CyberArmor-AgenticLoop

./: .gitignore  .safetyignore  CLAUDE.md  README.md  package-lock.json  project_rules.md
.agent_loop/: ARCHITECTURE.md  TECHNICAL_ASSIGNMENT.md  main_loop.md
.agent_loop/control/: file_system_guard.md  network_guard.md
.claude/: settings.local.json
apps/cyberarmor/backend/: pyproject.toml  requirements.txt
apps/cyberarmor/backend/alembic/: env.py
apps/cyberarmor/backend/alembic/versions/: 20240619_initial_schema.py  20240620_add_auth_rbac_security.py  20240621_payment_shipping_workflow.py  20240622_cents_promo_upsell.py  20240623_user_profile_devices.py  20240624_email_celery_password_reset.py  20240625_rfq_requests.py
apps/cyberarmor/backend/app/: main.py
apps/cyberarmor/backend/app/api/v1/: router.py
apps/cyberarmor/backend/app/api/v1/endpoints/: admin.py  auth.py  checkout.py  health.py  payments.py  products.py  profile.py  rfq.py
apps/cyberarmor/backend/app/core/: celery_app.py  config.py  jwt.py  security.py
apps/cyberarmor/backend/app/crud/: user.py
apps/cyberarmor/backend/app/db/: session.py
apps/cyberarmor/backend/app/models/: __init__.py  order.py  product.py  rfq.py  user.py
apps/cyberarmor/backend/app/schemas/: order.py  product.py  rfq.py  user.py
apps/cyberarmor/backend/app/services/: crm.py  email.py  tasks.py
apps/cyberarmor/backend/scripts/: celery_scrub_pii.py  init_db.py  seed_products.py  seed_promo_codes.py
mcp_servers/: bootstrap.py  registry.py
runtime/: cli.py  main.py  tui.py
scripts/: safety_check.js
(+94 files in other folders)
